Add Bootstrap and some styling. Add sorting to recipe-list clicking on titles

--- a/recipes-client/src/app/recipe-detail/recipe-detail.component.scss
+++ b/recipes-client/src/app/recipe-detail/recipe-detail.component.scss
@@ -1,4 +1,8 @@
 .recipe-detail {
+    .recipe-title {
+        font-weight: bold;
+    }
+
     .recipe-photo {
         float: right;
         max-width: 35%;
